<resources>
    <string name="app_name" translatable="false">BeKind</string>
    <string name="title_activity_bottom_bar" translatable="false">BeKind</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_available">Attività</string>
    <string name="title_dashboard">Bacheca</string>
    <string name="title_profile">Profilo</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splashscreen">SplashScreenActivity</string>
    <string name="preferences_key">preferences_key</string>
    <string name="made_by_roundtable">Made by RoundTable</string>
    <string name="access_btn">Accedi</string>
    <string name="password_hint">Password</string>
    <string name="register_text">Non sei iscritto? Registrati!</string>
    <string name="email_hint">Email</string>
    <string name="login_title">Inserisci le tue credenziali</string>
    <string name="add_btn">Add button</string>
    <string name="wrong_page">You are not supposed to see this</string>
    <string name="cancel_btn">Annulla</string>
    <string name="confirm_btn">Conferma</string>
    <string name="new_proposal_text">Crea una nuova attività</string>
    <string name="title_hint">Titolo</string>
    <string name="description_hint">Descrizione</string>
    <string name="group_activity_text">E\' un\'attività di gruppo?</string>
    <string name="partecipants_number">Numero di partecipanti</string>
    <string name="shopping_chip">Spesa</string>
    <string name="housework_chip">Lavori Domestici</string>
    <string name="cleaning_chip">Pulizie</string>
    <string name="transport_chip">Trasporto</string>
    <string name="random_chip">Varie</string>
    <string name="creation_choice_text">Che cosa vuoi creare?</string>
    <string name="proposal_btn">Attività</string>
    <string name="post_btn">Post</string>
    <string name="new_post_title">Crea un nuovo post</string>
    <string name="event_chip">Eventi</string>
    <string name="utilities_chip">Utenze</string>
    <string name="animal_chip">Animali</string>
    <string name="public_transport_chip">Trasporto pubblico</string>
    <string name="criminal_chip">Criminalità</string>
    <string name="modify_proposal_text">Modifica attività</string>
    <string name="x_day_program">Programma del giorno\ </string>
    <string name="total_proposals">Programma totale</string>
    <string name="neighbourhood_creation_title">Crea quartiere</string>
    <string name="neighbourhood_name_hint">Nome quartiere</string>
    <string name="back_btn">Indietro</string>
    <string name="profile_image_description">profile image</string>
    <string name="username_text">Nome Utente</string>
    <string name="modify_profile_btn">Modifica Profilo</string>
    <string name="modify_residence">Modifica Residenza</string>
    <string name="my_proposal_tab">Le mie proposte</string>
    <string name="my_post_tab">I miei post</string>
    <string name="register_title">Registrati qui</string>
    <string name="name_hint">Nome</string>
    <string name="surname_hint">Cognome</string>
    <string name="birth_date_hint">Data di Nascita</string>
    <string name="continue_btn">Continua</string>
    <string name="residence_title">Inserisci dati residenza</string>
    <string name="city_hint">Città</string>
    <string name="neighbourhod_hint">Quartiere</string>
    <string name="street_hint">Via</string>
    <string name="street_number_hint">Civico</string>
    <string name="neighbourhood_creation_text">Non c\'è il tuo quartiere? Crealo!</string>
    <string name="proposal_title">proposal_title</string>
    <string name="proposal_body">proposal_body</string>
    <string name="proposal_participants">proposal_participants</string>
    <string name="expiring_hour">expiring_hour</string>
    <string name="expiring_date">expiring_date</string>
    <string name="accept_prop_btn">accept_prop_btn</string>
    <string name="flag_button">flag_button</string>
    <string name="map_button">map_button</string>
    <string name="delete_button">delete_button</string>
    <string name="edit_button">edit_button</string>
    <string name="confirm_button">confirm_button</string>
    <string name="reject_button">reject_button</string>
    <string name="post_publisher">post_publisher</string>
    <string name="post_title">post_title</string>
    <string name="post_body">post_body</string>
    <string name="modify_neighbourhood_title">Modifica il tuo profilo</string>
    <string name="modify_credentials_text">Modifica credenziali</string>
    <string name="language_selection">Seleziona lingua</string>
    <string name="font_size">Grandezza testo</string>
    <string name="theme_selection">Seleziona tema</string>
    <string name="logout">Esci</string>
    <string name="tutorial">Rivedi tutorial</string>
    <string name="privacy">Informazioni sulla privacy</string>
    <string name="google_maps_key">AIzaSyA3HPOduQGsgbyQ9ZNoXvKr7t_M9yXmxqw</string>
    <string name="delete_periodic_proposal">Stai per cancellare un\'attività periodica. Vuoi cancellare:</string>
    <string name="only_this_time">Solo questa occorrenza</string>
    <string name="all_occurrencies">Tutte le occorrenze</string>
    <string name="email_error">Per accedere devi inserire una email</string>
    <string name="password_error">Per accedere devi inserire una password</string>
    <string name="empty_field">Questo campo non può essere vuoto</string>
    <string name="not_existing_neigh">Questo quartiere non esiste. Crealo!</string>
    <string name="password_requirements">La password deve contenere almeno un carattere maiuscolo, un carattere minuscolo e un numero</string>
    <string name="password_length">La password deve essere lunga almeno 8 caratteri</string>
    <string name="login_cerdentials_error">Errore: le credenziali di accesso non sono corrette</string>
    <string name="fields_error">Errore: i campi non sono stati riempiti correttamente</string>
    <string name="min_partecipants">Un\'attività di gruppo prevede un minimo di 2 partecipanti</string>
    <string name="max_partecipants">Un\'attività di gruppo prevede un massimo di 20 partecipanti</string>
    <string name="existing_neighbourhood">Errore: questo quartiere esiste già</string>
    <string name="publish_activity">Attività pubblicata correttamente</string>
    <string name="activity_publication_error">Errore nella pubblicazione dell\'attività</string>
    <string name="user">Tu</string>
    <string name="flag_post">Post segnalato</string>
    <string name="cancel_post">Post cancellato correttamente</string>
    <string name="error_cancellation_post">Impossibile cancellare post</string>
    <string name="modify_post">Modifica post</string>
    <string name="update_post">Post aggiornato correttamente</string>
    <string name="error_update_post">Impossibile modificare post</string>
    <string name="flagged_post">Post segnalato con successo</string>
    <string name="error_flag_post">Impossibile segnalare il post</string>
    <string name="unflagged_post">Post non segnalato con successo</string>
    <string name="error_unflagging_post">Impossibile non segnalare il post</string>
    <string name="liked_post">Post likkato con successo</string>
    <string name="error_like_post">Impossibile likkare il post</string>
    <string name="dislike_post">Post unlikkato con successo</string>
    <string name="error_dislike_post">Impossibile unlikkare il post</string>
    <string name="number_partecipants">\"N. partecipanti attuali: \"</string>
    <string name="flagged_activity">Attività segnalata</string>
    <string name="delete_activity">Attività cancellata correttamente</string>
    <string name="error_delete_activity">Impossibile cancellare attività</string>
    <string name="options">Prima di confermare scegli una delle opzioni</string>
    <string name="update_activity">Modifica attività</string>
    <string name="updated_activity">Attività modificata correttamente</string>
    <string name="error_updated_activity">Impossibile modificare attività</string>
    <string name="completed_activity">Attività terminata correttamente</string>
    <string name="error_completed_activity">Impossibile terminare attività</string>
    <string name="error_completion">L\'attività non è stata presa in carico da alcun utente. Impossibile evaderla.</string>
    <string name="accept_activity">Attività accettata correttamente</string>
    <string name="error_accept_activity">Errore nell\'accettazione dell\'attività</string>
    <string name="flag_activity">Attività segnalato con successo.</string>
    <string name="error_flag_activity">Impossibile segnalare l\'attività.</string>
    <string name="unflag_activity">Attività non segnalata con successo.</string>
    <string name="error_unflag_activity">Impossibile non segnalare l\'attività.</string>
    <string name="withdrawal_activity">Ritiro dall\'attività avvenuto correttamente</string>
    <string name="error_withdrawal_activity">Errore nel ritiro dall\'attività</string>
    <string name="modify_residence_data">Modifica dati residenza</string>
    <string name="close">CHIUDI</string>
    <string name="confirm">CONFERMA</string>
    <string name="already_existing_neighbourhood">Il quartiere esiste già</string>
    <string name="not_existing_neighbourhood">Il quartiere non esiste</string>
    <string name="create_new_activity_text">Crea una nuova attività</string>
    <string name="expiring_date_title">Data e ora di scadenza</string>
    <string name="group_activity">È un\'attività di gruppo?</string>
    <string name="periodic">È un\'attività periodica?</string>
    <string name="num_partecipants">Numero di partecipanti</string>
    <string name="forward_btn">Avanti</string>
    <string name="description_1">Nella barra in basso, è possibile accedere alle principali sezioni dell\'app: Home, Attività, Bacheca, Profilo. Premendo sul pulsante centrale invece, si aprirà un pop-up che permetterà la creazione di un\'attività o di un post.</string>
    <string name="description_2">Dopo avere premuto il pulsante "+" e aver selezionato "ATTIVITÀ" apparirà il seguente popup, tramite il quale potrai specificare un titolo,una descizione, una data e un\'ora di scadenza per la tua attività. Potrai inoltre selezionare delle proprietà per facilitare le ricerche.</string>
    <string name="description_3">Nella seconda pagina della creazione attività potrai localizzarla inserendo un indirizzo tramite Google Maps. Potrai inoltre specificare se è un\'attività di gruppo, specificando il numero di partecipanti, o se è un\'attività periodica, specificando la cadenza.</string>
    <string name="description_4">Oltre a creare attività, è possibile creare dei post che saranno visualizzabili nella "Bacheca". Essi sono composti da un titolo, una descrizione e delle proprietà per facilitarne la ricerca.</string>
    <string name="description_5">Dalla pagina "Profilo", potrai accedere alle tue proposte. Cliccando il pulsante indicato dalla freccia rossa potrai cancellare la tua attività, cliccando il pulsante indicato dalla freccia verde potrai modificarla e cliccando il pulsante indicato dalla freccia blu potrai evaderla a seguito del suo completamento. </string>
    <string name="description_6">Dalla pagina "Profilo", potrai accedere ai tuoi post. Cliccando il pulsante indicato dalla freccia rossa, è possibile cancellarli, cliccando quello blu, modificarlo.</string>
    <string name="description_7">Nella pagina "Attività" potrai visualizzare tutte le attività disponibili. Potrai segnalarle, se le ritieni inappropriate, cliccando il pulsante indicato dalla freccia verde, potrai accettarle cliccanod il pulsante indicato dalla freccia blu e potrai geolocalizzarrle cliccando il pulsante indicato dalla freccia rossa.</string>
</resources>