<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UILayer.ui.dashboard.DashboardFragment">

    <RelativeLayout
        android:id="@+id/schedule_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/scheduledate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_day_program"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:visibility="visible"
            android:clickable="true"/>

        <TextView
            android:id="@+id/total_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_proposals"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:visibility="invisible"
            android:clickable="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/simpleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chips_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/schedule_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/primaryDarkColor">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/event_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/event_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/utilities_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/utilities_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/criminal_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/criminal_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/transport_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/public_transport_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/animal_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/animal_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/random_chip"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/random_chip"
                    android:checkable="true"
                    android:checked="false"/>

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chips_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_post"
            android:layout_width="wrap_content"
            android:layout_height="670dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:listitem="@layout/list_post_element">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>