<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/proposal_popup1"
    android:background="@drawable/list_element_roundcorner"
    android:backgroundTint="?attr/colorPrimaryVariant">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_element_roundcorner"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <TextView
            android:id="@+id/new_activity_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/create_new_activity_text"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_activity_header"
            app:boxBackgroundColor="?attr/colorPrimaryVariant"
            app:hintTextColor="@color/primaryDarkColor"
            app:boxStrokeColor="@color/primaryDarkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textCursorDrawable="@color/primaryDarkColor"
                android:hint="@string/title_hint"
                android:inputType="textNoSuggestions"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_container"
            app:boxBackgroundColor="?attr/colorPrimaryVariant"
            app:hintTextColor="@color/primaryDarkColor"
            app:boxStrokeColor="@color/primaryDarkColor">

            <!-- https://stackoverflow.com/questions/4233626/allow-multi-line-in-edittext-view-in-android -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textCursorDrawable="@color/primaryDarkColor"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLines="5"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/datehour_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/body_container"
            android:text="@string/expiring_date_title"
            android:textSize="17sp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:id="@+id/datehour_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datehour_header"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"/>

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:timePickerMode="spinner"
                android:numbersTextColor="?attr/colorOnPrimary"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/chips_layout_popup"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/datehour_container"
            android:layout_centerHorizontal="true">
            
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_popup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/shopping_chip_popup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/shopping_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/houseworks_chip_popup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/housework_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/cleaning_chip_popup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/cleaning_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/transport_chip_popup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/transport_chip"
                    android:checkable="true"
                    android:checked="false"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/random_chip_popup"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/random_chip"
                    android:checkable="true"
                    android:checked="false"/>

            </com.google.android.material.chip.ChipGroup>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chips_layout_popup"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:gravity="center"
            android:weightSum="2.2">

            <Button
                android:id="@+id/close_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_btn"
                android:textColor="?attr/colorTertiary"
                android:background="@drawable/list_element_roundcorner"
                app:backgroundTint="?attr/colorButtonNormal"/>

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continue_btn"
                android:textColor="?attr/colorTertiary"
                android:background="@drawable/list_element_roundcorner"
                app:backgroundTint="?attr/colorButtonNormal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
