<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/list_element_roundcorner"
    android:backgroundTint="?attr/colorPrimaryVariant">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/choose_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/creation_choice_text"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.2"
            android:layout_below="@id/choose_text"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">


            <Button
                android:id="@+id/activity_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proposal_btn"
                android:textColor="?attr/colorTertiary"
                android:background="@drawable/list_element_roundcorner"
                app:backgroundTint="?attr/colorButtonNormal"/>

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />


            <Button
                android:id="@+id/post_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_btn"
                android:textColor="?attr/colorTertiary"
                android:background="@drawable/list_element_roundcorner"
                app:backgroundTint="?attr/colorButtonNormal"/>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>